versioned_docs/version-2023.1.2/professor/elenice_josefa_kolancko_setti.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
const data = {
  title: "Elenice Josefa Kolancko Setti",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: [
        {
          subject: "Matemática I",
          size: 2,
          teachers: [
            "Elenice Josefa Kolancko Setti"
          ],
          classroom: "Sala 9-2",
          students: "IIW2023A",
          time: "10:15 - 11:05"
        },
        {
          subject: "Matemática II",
          size: 2,
          teachers: [
            "Elenice Josefa Kolancko Setti"
          ],
          classroom: "Sala 13-2",
          students: "IIW2022A",
          time: "07:30 - 08:20"
        },
        {
          subject: "Matemática III",
          size: 2,
          teachers: [
            "Elenice Josefa Kolancko Setti"
          ],
          classroom: "Sala 14-2",
          students: "AGO2021",
          time: "13:10 - 14:00"
        }
      ]
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "Bioestatística",
          size: 2,
          teachers: [
            "Elenice Josefa Kolancko Setti"
          ],
          classroom: "Sala 16-2",
          students: "BIO2020",
          time: "21:00 - 21:50"
        },
        {
          subject: "Fundamentos de Matemática",
          size: 2,
          teachers: [
            "Elenice Josefa Kolancko Setti"
          ],
          classroom: "Sala 9-2",
          students: "ELM2023",
          time: "19:00 - 19:50"
        },
        {
          subject: "Matemática I",
          size: 2,
          teachers: [
            "Elenice Josefa Kolancko Setti"
          ],
          classroom: "Sala 9-2",
          students: "IIW2023A",
          time: "10:15 - 11:05"
        },
        {
          subject: "Matemática I",
          size: 2,
          teachers: [
            "Elenice Josefa Kolancko Setti"
          ],
          classroom: "Sala 6-2",
          students: "AGO2023",
          time: "07:30 - 08:20"
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: []
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "Matemática II",
          size: 2,
          teachers: [
            "Elenice Josefa Kolancko Setti"
          ],
          classroom: "Sala 13-2",
          students: "IIW2022A",
          time: "07:30 - 08:20"
        },
        {
          subject: "Matemática II",
          size: 2,
          teachers: [
            "Elenice Josefa Kolancko Setti"
          ],
          classroom: "Sala 11-2",
          students: "AGO2022",
          time: "10:15 - 11:05"
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: []
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:10 - 09:25",
      size: 15
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "11:55 - 13:10",
      size: 75
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "14:50 - 15:05",
      size: 15
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 19:00",
      size: 135
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "20:40 - 21:00",
      size: 20
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Elenice Josefa Kolancko Setti

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
